# SC-SENTINEL

./: .gitattributes  .gitignore  BUG_FIXES.md  INTEGRATION_GUIDE.md  README.md  SC-SENTINEL_执行手册.docx  diagnose.sh  docker-compose.yaml
sentinel-backend/: README.md  alembic.ini  docker-compose.yaml  pyproject.toml
sentinel-backend/alembic/: env.py
sentinel-backend/app/: main.py
sentinel-backend/app/api/v1/: __init__.py  router.py  tasks.py  ws.py
sentinel-backend/app/core/: config.py  pdf_generator.py
sentinel-backend/app/models/: __init__.py  task.py
sentinel-backend/app/schemas/: common.py
sentinel-backend/tests/: smoke_test.py
sentinel_agent/: .env.example  .gitignore  (+8 more)
sentinel_agent/samples/level1_testset/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY.md  ctf_input.h  double_free_alias.c  double_free_cleanup.c  double_free_direct.c  double_free_error_path.c  format_string_fprintf.c  format_string_printf.c  format_string_snprintf.c  format_string_syslog_like.c  heap_overflow_integer_trunc.c  heap_overflow_off_by_one.c  heap_overflow_strcpy.c  stack_overflow_index.c  stack_overflow_sprintf.c  stack_overflow_strcpy.c  uaf_array_slot.c  uaf_cross_function.c  uaf_direct.c  uaf_struct_field.c
sentinel_agent/samples/level1_testset/docs/: CWE_MATRIX.md  HARNESS_NOTES.md
sentinel_agent/samples/level2_testset/01_textkit/: CMakeLists.txt  Makefile  README.md  conanfile.txt
sentinel_agent/samples/level2_testset/01_textkit/include/: json_parser.h
sentinel_agent/samples/level2_testset/01_textkit/src/: json_parser.c  main.c
sentinel_agent/samples/level2_testset/02_imagepipe/: CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
sentinel_agent/samples/level2_testset/02_imagepipe/include/: png_loader.h
sentinel_agent/samples/level2_testset/02_imagepipe/src/: main.c  png_loader.c
sentinel_agent/samples/level2_testset/02_png_uaf/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY.md  vcpkg.json
sentinel_agent/samples/level2_testset/02_png_uaf/docs/: vulnerability.md
sentinel_agent/samples/level2_testset/02_png_uaf/include/: png_loader.h
sentinel_agent/samples/level2_testset/02_png_uaf/src/: main.c  png_loader.c
sentinel_agent/samples/level2_testset/03_fieldbus/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.txt
sentinel_agent/samples/level2_testset/03_fieldbus/include/: modbus_proto.h
sentinel_agent/samples/level2_testset/03_fieldbus/src/: main.c  modbus_proto.c
sentinel_agent/samples/level2_testset/03_modbus_stackoverflow/: CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY.md
sentinel_agent/samples/level2_testset/03_modbus_stackoverflow/include/: modbus_proto.h
sentinel_agent/samples/level2_testset/03_modbus_stackoverflow/src/: main.c  modbus_proto.c
sentinel_agent/samples/level2_testset/04_tree_doublefree/: CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY.md
sentinel_agent/samples/level2_testset/04_tree_doublefree/docs/: vulnerability.md
sentinel_agent/samples/level2_testset/04_tree_doublefree/include/: ast_tree.h
sentinel_agent/samples/level2_testset/04_tree_doublefree/seeds/: seed_02.txt
sentinel_agent/samples/level2_testset/04_tree_doublefree/src/: ast_tree.c  main.c
sentinel_agent/samples/level2_testset/05_chunked_intoverflow/: CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY.md  conanfile.txt
sentinel_agent/samples/level2_testset/05_chunked_intoverflow/docs/: vulnerability.md
sentinel_agent/samples/level2_testset/05_chunked_intoverflow/include/: chunked_http.h
sentinel_agent/samples/level2_testset/05_chunkstream/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.txt
sentinel_agent/samples/level2_testset/06_adpcm_oobread/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY.md  vcpkg.json
sentinel_agent/samples/level2_testset/06_audiodec/: CMakeLists.txt  Makefile  README.md  vcpkg.json
sentinel_agent/samples/level2_testset/07_imagecodec/: CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
sentinel_agent/samples/level2_testset/08_proxyroute/: CMakeLists.txt  Makefile  README.md  vcpkg.json
sentinel_agent/samples/level2_testset/09_resolver/: CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
sentinel_agent/samples/level2_testset/10_authframe/: CMakeLists.txt  Makefile  README.md  SECURITY.md  vcpkg.json
sentinel_agent/samples/level2_testset/11_tunnelctl/: CMakeLists.txt  Makefile  README.md  vcpkg.json
sentinel_agent/samples/level2_testset/12_sshscan/: CMakeLists.txt  Makefile  README.md  vcpkg.json
sentinel_agent/samples/level2_testset/13_cachemgr/: CMakeLists.txt  Makefile  README.md  vcpkg.json
sentinel_agent/samples/level2_testset/14_logutil/: CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
sentinel_backend/: .dockerignore  .gitignore  Dockerfile  INTEGRATION_GUIDE.md  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  test_pipeline.py
sentinel_backend/alembic/versions/: 2026_06_13_0212-c2343e8e8bb0_add_ebpf_correction_fields.py
sentinel_backend/app/: main.py
sentinel_backend/app/api/v1/: audit.py  router.py  tasks.py  ws.py
sentinel_backend/app/core/: __init__.py  broker.py  config.py  database.py  pdf_generator.py  progress_stream.py  ws_manager.py
sentinel_backend/app/models/: component_risk.py  ebpf_event_log.py  vulnerability.py
sentinel_backend/app/schemas/: __init__.py  task.py
sentinel_backend/app/services/: __init__.py  sandbox_manager.py  source_parser.py
sentinel_backend/app/worker/: __init__.py  fuzzing_task.py  llm_task.py  middleware.py  pipeline.py  sbom_task.py
sentinel_backend/docker/: Dockerfile.sandbox
sentinel_backend/docker/ebpf/: monitor.bt
sentinel_backend/dummy_test/: CMakeLists.txt  main.c
sentinel_backend/tests/: test_pdf_export.py
tmp/inspect_level2_json/01_json_heapoverflow/: .gitignore  CMakeLists.txt  README.md
tmp/inspect_level2_json/01_json_heapoverflow/docs/: vulnerability.md
(+644 files in other folders)
