[project]
name = "sentinel-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "lazy30090",email = "lazy30090@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "taskiq (>=0.12.4,<1.0.0)",
    "taskiq-redis (>=1.2.2,<2.0.0)",
    "taskiq-fastapi (>=0.5.0,<1.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "docker (>=7.1.0,<8.0.0)"

]

[tool.poetry]
packages = [{include = "sentinel_backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
