cmake_minimum_required(VERSION 3.10)
project(microjson VERSION 0.4.2 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(include)
add_library(json_parser_lib STATIC src/json_parser.c)
add_executable(json_parser src/main.c)
target_link_libraries(json_parser json_parser_lib)
enable_testing()
add_test(NAME smoke COMMAND json_parser)
install(TARGETS json_parser json_parser_lib RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
install(DIRECTORY include/ DESTINATION include/json_parser)
