cmake_minimum_required(VERSION 3.10)
project(pngreader VERSION 1.6.36 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(include)
add_library(png_loader_lib STATIC src/png_loader.c)
add_executable(png_loader src/main.c)
target_link_libraries(png_loader png_loader_lib)
enable_testing()
add_test(NAME smoke COMMAND png_loader)
install(TARGETS png_loader png_loader_lib RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
install(DIRECTORY include/ DESTINATION include/png_loader)
