cmake_minimum_required(VERSION 3.10)
project(modlite VERSION 3.1.6 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(include)
add_library(modbus_parser_lib STATIC src/modbus_proto.c)
add_executable(modbus_parser src/main.c)
target_link_libraries(modbus_parser modbus_parser_lib)
enable_testing()
add_test(NAME smoke COMMAND modbus_parser)
install(TARGETS modbus_parser modbus_parser_lib RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
install(DIRECTORY include/ DESTINATION include/modbus_parser)
