cmake_minimum_required(VERSION 3.10)
project(ast_tree C)
set(CMAKE_C_STANDARD 99)
include_directories(include)
add_library(ast_tree_lib STATIC src/ast_tree.c)
target_include_directories(ast_tree_lib PUBLIC include)
add_executable(ast_parser src/main.c)
target_link_libraries(ast_parser ast_tree_lib)
option(ENABLE_ASAN "Build with AddressSanitizer" OFF)
if(ENABLE_ASAN)
    add_compile_options(-fsanitize=address -fno-omit-frame-pointer -g -O0)
    add_link_options(-fsanitize=address)
endif()
