cmake_minimum_required(VERSION 3.10)
project(chunked_http C)
set(CMAKE_C_STANDARD 99)
include_directories(include)
add_library(chunked_http_lib STATIC src/chunked_http.c)
target_include_directories(chunked_http_lib PUBLIC include)
add_executable(chunked_decoder src/main.c)
target_link_libraries(chunked_decoder chunked_http_lib)
option(ENABLE_ASAN "Build with AddressSanitizer" OFF)
if(ENABLE_ASAN)
    add_compile_options(-fsanitize=address -fno-omit-frame-pointer -g -O0)
    add_link_options(-fsanitize=address)
endif()
