cmake_minimum_required(VERSION 3.10)
project(httpdecode VERSION 2.0.20 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(include)
add_library(http_decoder_lib STATIC src/chunked_http.c)
add_executable(http_decoder src/main.c)
target_link_libraries(http_decoder http_decoder_lib)
enable_testing()
add_test(NAME smoke COMMAND http_decoder)
install(TARGETS http_decoder http_decoder_lib RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
install(DIRECTORY include/ DESTINATION include/http_decoder)
