cmake_minimum_required(VERSION 3.10)
project(adpcm_decoder C)
set(CMAKE_C_STANDARD 99)
include_directories(include)
add_library(adpcm_decoder_lib STATIC src/adpcm_decoder.c)
target_include_directories(adpcm_decoder_lib PUBLIC include)
add_executable(adpcm_decode src/main.c)
target_link_libraries(adpcm_decode adpcm_decoder_lib)
option(ENABLE_ASAN "Build with AddressSanitizer" OFF)
if(ENABLE_ASAN)
    add_compile_options(-fsanitize=address -fno-omit-frame-pointer -g -O0)
    add_link_options(-fsanitize=address)
endif()
