cmake_minimum_required(VERSION 3.10)
project(sndmini VERSION 1.0.28 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(include)
add_library(adpcm_decoder_lib STATIC src/adpcm_decoder.c)
add_executable(adpcm_decoder src/main.c)
target_link_libraries(adpcm_decoder adpcm_decoder_lib)
enable_testing()
add_test(NAME smoke COMMAND adpcm_decoder)
install(TARGETS adpcm_decoder adpcm_decoder_lib RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
install(DIRECTORY include/ DESTINATION include/adpcm_decoder)
