cmake_minimum_required(VERSION 3.10)
project(minivp8 VERSION 1.2.3 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(include)
add_library(webp_huff_lib STATIC src/webp_huff.c)
add_executable(webp_huff src/main.c)
target_link_libraries(webp_huff webp_huff_lib)
enable_testing()
add_test(NAME smoke COMMAND webp_huff)
install(TARGETS webp_huff webp_huff_lib RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
install(DIRECTORY include/ DESTINATION include/webp_huff)
