cmake_minimum_required(VERSION 3.10)
project(sockmini VERSION 7.86.0 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(include)
add_library(socks5_host_lib STATIC src/socks5_host.c)
add_executable(socks5_host src/main.c)
target_link_libraries(socks5_host socks5_host_lib)
enable_testing()
add_test(NAME smoke COMMAND socks5_host)
install(TARGETS socks5_host socks5_host_lib RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
install(DIRECTORY include/ DESTINATION include/socks5_host)
