cmake_minimum_required(VERSION 3.10)
project(resmini VERSION 2.22.0 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(include)
add_library(dns_reply_lib STATIC src/dns_reply.c)
add_executable(dns_reply src/main.c)
target_link_libraries(dns_reply dns_reply_lib)
enable_testing()
add_test(NAME smoke COMMAND dns_reply)
install(TARGETS dns_reply dns_reply_lib RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
install(DIRECTORY include/ DESTINATION include/dns_reply)
