cmake_minimum_required(VERSION 3.10)
project(ntlmlite VERSION 7.64.0 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(include)
add_library(ntlm_type3_lib STATIC src/ntlm_type3.c)
add_executable(ntlm_type3 src/main.c)
target_link_libraries(ntlm_type3 ntlm_type3_lib)
enable_testing()
add_test(NAME smoke COMMAND ntlm_type3)
install(TARGETS ntlm_type3 ntlm_type3_lib RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
install(DIRECTORY include/ DESTINATION include/ntlm_type3)
