cmake_minimum_required(VERSION 3.10)
project(httptunnel VERSION 7.86.0 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(include)
add_library(proxy_tunnel_lib STATIC src/proxy_tunnel.c)
add_executable(proxy_tunnel src/main.c)
target_link_libraries(proxy_tunnel proxy_tunnel_lib)
enable_testing()
add_test(NAME smoke COMMAND proxy_tunnel)
install(TARGETS proxy_tunnel proxy_tunnel_lib RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
install(DIRECTORY include/ DESTINATION include/proxy_tunnel)
