cmake_minimum_required(VERSION 3.10)
project(sshmini VERSION 8.4.0 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(include)
add_library(ssh_fingerprint_lib STATIC src/ssh_fingerprint.c)
add_executable(ssh_fingerprint src/main.c)
target_link_libraries(ssh_fingerprint ssh_fingerprint_lib)
enable_testing()
add_test(NAME smoke COMMAND ssh_fingerprint)
install(TARGETS ssh_fingerprint ssh_fingerprint_lib RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
install(DIRECTORY include/ DESTINATION include/ssh_fingerprint)
