cmake_minimum_required(VERSION 3.10)
project(hstsmini VERSION 7.88.0 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(include)
add_library(hsts_cache_lib STATIC src/hsts_cache.c)
add_executable(hsts_cache src/main.c)
target_link_libraries(hsts_cache hsts_cache_lib)
enable_testing()
add_test(NAME smoke COMMAND hsts_cache)
install(TARGETS hsts_cache hsts_cache_lib RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
install(DIRECTORY include/ DESTINATION include/hsts_cache)
