cmake_minimum_required(VERSION 3.10)
project(sudolite VERSION 1.8.30 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(include)
add_library(debug_log_lib STATIC src/debug_log.c)
add_executable(debug_log src/main.c)
target_link_libraries(debug_log debug_log_lib)
enable_testing()
add_test(NAME smoke COMMAND debug_log)
install(TARGETS debug_log debug_log_lib RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
install(DIRECTORY include/ DESTINATION include/debug_log)
